cabal-version:      3.0
name:               reactive-markup
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Simre1
maintainer:         simre4775@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    build-depends:    base ^>=4.17.1.0, vector, containers, text, optics-core
    default-language: GHC2021
    default-extensions:
        DerivingStrategies,
        OverloadedLabels,
        OverloadedStrings,
        TypeFamilies,
        MultiParamTypeClasses,
        DataKinds,
        NoFieldSelectors,
        DuplicateRecordFields
        

library
    import:           common
    exposed-modules:  
        Data.ExtractType,
        ReactiveMarkup.Markup,
        ReactiveMarkup.Elements.Paragraph,
        ReactiveMarkup.Elements.Block,
        ReactiveMarkup.Elements.Basic,
        ReactiveMarkup.Elements.Dynamic,
        ReactiveMarkup.Elements.Theme,
        ReactiveMarkup.Elements.Interactive
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

test-suite reactive-markup-test
    import:           common
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        reactive-markup
